# chatbot

./: .gitignore  README.md  evalution.ipynb  examination-cell.ipynb  main.py  notice_board.ipynb  pyproject.toml  rag copy.ipynb  rag.ipynb  rag_final copy.ipynb  rag_final.ipynb  requirements.txt
app/: index.html  main.py  script.js  streamlit_app.py
app/routers/: health.py  query.py
cgu-frontend/: package-lock.json  package.json
cgu-frontend/src/: App.js
core/: config.py  embedding_model.py  logging.py  models.py  pinecone_client.py
examination_cell_03/: chroma.sqlite3
experiments/examination_cell_03/: chroma.sqlite3
experiments/open_source_embedding/: examination-cell_hf.ipynb  rag_open_source_model.ipynb
experiments/openai_embedding/: doc.ipynb  examination-cell.ipynb
graph/: checkpointing.py  common.py  prompts.py  state.py  workflow.py
graph/nodes/: answer.py  decision.py  grade_docs.py  hallucination.py  rewrite.py
ingestion/common/: document_builder.py  ocr_utils.py  scraper_base.py  summarization.py
ingestion/examination/: config.py  pipeline.py  summarizer.py
ingestion/notice_board/: config.py  pipeline.py
ingestion/static_docs/: loader.py  pipeline.py  splitter.py
my_chroma_db/: chroma.sqlite3
notice_board_3/: chroma.sqlite3
open_source_embedding/: doc_hf.ipynb  notice_board_hf.ipynb
openai_embedding/: notice_board.ipynb
scripts/: run_examination_ingestion.py  run_notice_ingestion.py  run_static_ingestion.py
tests/evaluation/: target.py  (+2 more)
tools/: blog_tool.py  exam_tool.py  notice_tool.py  retrievers.py  websearch_tool.py
(+5 files in other folders)
