[project]
name = "abhi-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.1.3",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.0",
    "langchain-openai>=1.1.3",
    "langchain-tavily>=0.2.14",
    "langgraph>=1.0.5",
    "pandas>=2.3.3",
    "pdf2image>=1.17.0",
    "pypdf>=6.4.2",
]
